Fix filter/sort-by spacing

--- a/ui/src/Header/Headers.scss
+++ b/ui/src/Header/Headers.scss
@@ -48,18 +48,9 @@
   }
 }
 
-.headerRightContainer,
-.filterByDropDownContainer {
+.headerRightContainer {
   display: flex;
   flex-direction: row;
-}
-
-.headerRightContainer {
   justify-content: right;
   padding-left: 100px;
-
-  .filterByDropDownContainer {
-    width: auto;
-    padding-right: 30px;
-  }
 }
