--- a/ui/src/ReusableComponents/AccountDropdown.scss
+++ b/ui/src/ReusableComponents/AccountDropdown.scss
@@ -22,8 +22,8 @@
   color: $gray-1;
   font-size: 14px;
   position: relative;
-  padding-right: 0;
-  margin-right: 0;
+  padding: 0;
+  margin: 0;
 
   .fa-user {
     padding-right: 4px;
