--- a/ui/src/ReusableComponents/ProductFilterOrSortBy.scss
+++ b/ui/src/ReusableComponents/ProductFilterOrSortBy.scss
@@ -21,14 +21,16 @@
   width: auto;
   font-size: 12px;
   color: $gray-1;
+  padding-right: 30px;
+}
+
+.filterDropdownContainer,
+.sortByDropdownContainer {
+  display: flex;
 }
 
 .sortby-dropdown {
-  min-width: 120px;
-}
-
-.filterBy-dropdown {
-  min-width: 0;
+  min-width: 145px;
 }
 
 .sortby-option {
